/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package discovery;
import "pdpb.proto";

option java_package = "org.apache.hugegraph.pd.grpc.discovery";
option java_multiple_files = true;


service DiscoveryService {
  rpc register(NodeInfo) returns (RegisterInfo);
  rpc getNodes(Query) returns (NodeInfos);
  //  rpc getNodesByLabel(Conditions) returns (NodeInfos);
}

/* requests */
message NodeInfo {
  string id = 1;
  string appName = 2;
  string version = 3;
  string address = 4;
  int64 interval = 5;
  map<string, string> labels = 6;
}
message Query {
  string appName = 1;
  string version = 2;
  map<string, string> labels = 3;
}
message LeaseInfo {
  int64 registrationTs = 1;
  int64 lastHeartbeatTs = 2;
  int64 serverUpTs = 3;
}
message RegisterInfo {
  NodeInfo nodeInfo = 1;
  LeaseInfo leaseInfo = 2 ;
  RegisterType type = 3 ;
  pdpb.ResponseHeader header = 4;
}
enum RegisterType {
  Register = 0;
  Heartbeat = 1;
  Dislodge = 2;
}
//message Condition{
//  string label = 1;
//}
//message Conditions{
//  string label = 1;
//  string value = 2;
//}
message NodeInfos{
  repeated NodeInfo info = 1;
}
